# SceKernelModulemgr-Reverse

./: CMakeLists.txt  README.md  build.sh  export.txt  exports.yml  func_common.h  func_common.txt  import.yml  main.c  modulemgr.c  modulemgr_common.h  modulemgr_for_driver.c  modulemgr_for_kernel.c  modulemgr_internal.h
src/: debug.c  debug.h  import_defs.h  inhibit_loading.c  inhibit_loading.h  libkernel.c  log.c  log.h  main.c  module_debug.c  module_debug.h  module_inhibit_loading.c  module_load.c  module_load.h  module_load_types.h  module_preloading_load.c  module_preloading_load.h  module_preloading_start.c  module_search.c  module_syscall.c  module_syscall.h  module_user.c  module_utility.c  module_utility.h  modulemgr.c  modulemgr.h  modulemgr_common.h  modulemgr_for_driver.c  modulemgr_for_driver.h  modulemgr_for_kernel.c  modulemgr_for_kernel.h  modulemgr_internal.h  modulemgr_types.h  search.c  search.h  syscall.c  taihen_macro.h
